<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_pink20679_rectangle"
    tools:context=".ui.tableActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/_3eso_league"
                    android:textSize="48sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/clubs"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#BD9AFB"
                    android:gravity="center"
                    android:text="@string/clubs"
                    android:textColor="#040303"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/GP"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#BD9AFB"
                    android:gravity="center"
                    android:text="@string/gp"
                    android:textColor="#040303"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/points"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#BD9AFB"
                    android:gravity="center"
                    android:text="@string/points"
                    android:textColor="#040303"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/win"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#BD9AFB"
                    android:gravity="center"
                    android:text="@string/win"
                    android:textColor="#040303"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lose"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#BD9AFB"
                    android:gravity="center"
                    android:text="@string/lose"
                    android:textColor="#040303"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/draw"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#BD9AFB"
                    android:gravity="center"
                    android:text="@string/draw"
                    android:textColor="#040303"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gI"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#BD9AFB"
                    android:gravity="center"
                    android:text="@string/GI"
                    android:textColor="#040303"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gO"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#BD9AFB"
                    android:gravity="center"
                    android:text="@string/GO"
                    android:textColor="#040303"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:listitem="@layout/club_items">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/matchResult_btn"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:padding="5dp"
                    android:text="@string/match_results"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/setMatch_btn"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:padding="5dp"
                    android:text="@string/setMatch"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/repeat_btn"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button"
                    android:padding="5dp"
                    android:text="@string/repeat_league"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/deleteTable_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_delete_btn"
                    android:text="@string/delete_table"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>